--- a/templates/index.html
+++ b/templates/index.html
@@ -45,6 +45,7 @@
             <option>Fintech</option>
             <option>Healthcare</option>
             <option>Pharmacy</option>
+            <option>IT & SAAS</option>
           </select>
         </div>
 
